--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
     "next": "10.x",
     "react": "17.x",
     "react-dom": "17.x"
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.6",
+    "typescript": "^4.2.4",
+    "sass": "^1.34.0"
   }
 }
