--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "@mdx-js/loader": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
+    "@next/mdx": "^10.2.3",
     "next": "10.x",
     "react": "17.x",
     "react-dom": "17.x"
   },
   "devDependencies": {
     "@types/react": "^17.0.6",
-    "typescript": "^4.2.4",
-    "sass": "^1.34.0"
+    "sass": "^1.34.0",
+    "typescript": "^4.2.4"
   }
 }
