--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mdx-js/loader": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@next/mdx": "^10.2.3",
+    "date-fns": "^2.21.3",
     "next": "10.x",
     "react": "17.x",
     "react-dom": "17.x"
