--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@next/mdx": "^10.2.3",
     "classnames": "^2.3.1",
     "date-fns": "^2.21.3",
+    "feed": "^4.2.2",
     "fp-ts": "^2.10.5",
     "next": "10.x",
     "react": "17.x",
