--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "fp-ts": "^2.10.5",
     "next": "10.x",
     "react": "17.x",
-    "react-dom": "17.x"
+    "react-dom": "17.x",
+    "typewriter-effect": "^2.18.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.6",
