--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "10.x",
     "react": "17.x",
     "react-dom": "17.x",
+    "react-loading-skeleton": "^2.2.0",
     "typewriter-effect": "^2.18.0"
   },
   "devDependencies": {
