--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start"
   },
   "dependencies": {
@@ -16,6 +17,7 @@
     "feed": "^4.2.2",
     "fp-ts": "^2.10.5",
     "next": "10.x",
+    "next-sitemap": "^1.6.162",
     "react": "17.x",
     "react-dom": "17.x",
     "react-loading-skeleton": "^2.2.0",
