--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "feed": "^4.2.2",
     "fp-ts": "^2.11.1",
     "next": "11.x",
+    "next-seo": "^4.26.0",
     "next-sitemap": "^1.6.162",
     "react": "17.x",
     "react-dom": "17.x",
