--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "typewriter-effect": "^2.18.0"
   },
   "devDependencies": {
+    "@types/mdx-js__react": "^1.5.4",
     "@types/react": "^17.0.19",
     "sass": "^1.38.0",
     "typescript": "^4.3.5"
