--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "dependencies": {
     "@mdx-js/loader": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
-    "@next/mdx": "^11.1.0",
+    "@next/mdx": "^12.0.1",
     "classnames": "^2.3.1",
     "date-fns": "^2.25.0",
     "feed": "^4.2.2",
     "fp-ts": "^2.11.5",
-    "next": "11.x",
+    "next": "^12.0.1",
     "next-seo": "^4.28.1",
     "next-sitemap": "^1.6.192",
     "react": "17.x",
