--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "next": "^12.0.1",
     "next-seo": "^4.28.1",
     "next-sitemap": "^1.6.192",
+    "node-html-parser": "^5.1.0",
     "react": "17.x",
     "react-dom": "17.x",
     "react-loading-skeleton": "^3.0.1",
-    "typewriter-effect": "^2.18.2"
+    "typewriter-effect": "^2.18.2",
+    "xml-parse": "^0.4.0"
   },
   "devDependencies": {
     "@types/mdx-js__react": "^1.5.5",
