--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "date-fns": "^2.25.0",
     "feed": "^4.2.2",
     "fp-ts": "^2.11.5",
+    "jsdom": "^18.0.0",
     "next": "^12.0.1",
     "next-seo": "^4.28.1",
     "next-sitemap": "^1.6.192",
-    "node-html-parser": "^5.1.0",
     "react": "17.x",
     "react-dom": "17.x",
     "react-loading-skeleton": "^3.0.1",
@@ -27,6 +27,7 @@
     "xml-parse": "^0.4.0"
   },
   "devDependencies": {
+    "@types/jsdom": "^16.2.13",
     "@types/mdx-js__react": "^1.5.5",
     "@types/react": "^17.0.33",
     "sass": "^1.43.4",
