--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mdx-js/loader": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@next/mdx": "^12.0.1",
+    "@types/react-dom": "^17.0.10",
     "classnames": "^2.3.1",
     "date-fns": "^2.25.0",
     "feed": "^4.2.2",
@@ -21,7 +22,7 @@
     "next-seo": "^4.28.1",
     "next-sitemap": "^1.6.192",
     "react": "17.x",
-    "react-dom": "17.x",
+    "react-dom": "^17.0.2",
     "react-loading-skeleton": "^3.0.1",
     "typewriter-effect": "^2.18.2",
     "xml-parse": "^0.4.0"
