--- a/blog/package.json
+++ b/blog/package.json
@@ -32,7 +32,10 @@
     "@types/jsdom": "^16.2.13",
     "@types/mdx-js__react": "^1.5.5",
     "@types/react": "^17.0.37",
-    "sass": "^1.45.0",
-    "typescript": "^4.5.4"
+    "@vanilla-extract/css": "^1.6.8",
+    "@vanilla-extract/css-utils": "^0.1.2",
+    "@vanilla-extract/next-plugin": "^2.0.1",
+    "typescript": "^4.5.4",
+    "webpack": "^5.65.0"
   }
 }
