--- a/blog/package.json
+++ b/blog/package.json
@@ -29,6 +29,7 @@
     "xml-parse": "^0.4.0"
   },
   "devDependencies": {
+    "@cmd/tsconfig": "workspace:*",
     "@types/jsdom": "^16.2.13",
     "@types/mdx-js__react": "^1.5.5",
     "@types/react": "^17.0.37",
