--- a/blog/package.json
+++ b/blog/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@babel/core": "^7.16.5",
+    "@cmd/tokens": "workspace:*",
     "@mdx-js/loader": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@next/mdx": "^12.0.7",
