--- a/blog/package.json
+++ b/blog/package.json
@@ -12,14 +12,16 @@
     "@babel/core": "^7.16.5",
     "@cmd/domain": "workspace:*",
     "@cmd/ui-article": "workspace:*",
-    "@cmd/ui-theme": "workspace:*",
+    "@cmd/ui-footer": "workspace:*",
+    "@cmd/ui-header": "workspace:*",
+    "@cmd/ui-layout": "workspace:*",
+    "@cmd/ui-music-embed": "workspace:*",
     "@cmd/ui-text": "workspace:*",
-    "@cmd/ui-tokens": "workspace:*",
+    "@cmd/ui-theme": "workspace:*",
     "@mdx-js/loader": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@next/mdx": "^12.0.7",
     "@types/react-dom": "^17.0.11",
-    "classnames": "^2.3.1",
     "date-fns": "^2.27.0",
     "feed": "^4.2.2",
     "fp-ts": "^2.11.5",
@@ -29,8 +31,6 @@
     "next-sitemap": "^1.6.203",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-loading-skeleton": "^3.0.1",
-    "typewriter-effect": "^2.18.2",
     "xml-parse": "^0.4.0"
   },
   "devDependencies": {
@@ -38,8 +38,6 @@
     "@types/jsdom": "^16.2.13",
     "@types/mdx-js__react": "^1.5.5",
     "@types/react": "^17.0.37",
-    "@vanilla-extract/css": "^1.6.8",
-    "@vanilla-extract/css-utils": "^0.1.2",
     "@vanilla-extract/next-plugin": "^2.0.1",
     "typescript": "^4.5.4",
     "webpack": "^5.65.0"
