--- a/ui/music-embed/package.json
+++ b/ui/music-embed/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@cmd/ui-article",
+  "name": "@cmd/ui-music-embed",
   "version": "0.0.0",
   "private": true,
   "main": "dist/index.js",
@@ -8,25 +8,20 @@
     "build": "lib-builder"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.5",
     "@cmd/lib-builder": "workspace:*",
     "@cmd/tsconfig": "workspace:*",
     "@types/react": "^17.0.37",
-    "next": "^12.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "typescript": "^4.5.4"
   },
   "dependencies": {
-    "@cmd/domain": "workspace:*",
     "@cmd/ui-theme": "workspace:*",
-    "@cmd/ui-text": "workspace:*",
     "@vanilla-extract/css": "^1.6.8",
     "classnames": "^2.3.1",
-    "fp-ts": "^2.11.5"
+    "react-loading-skeleton": "^3.0.1"
   },
   "peerDependencies": {
-    "next": "^12.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
