--- a/ui/text/package.json
+++ b/ui/text/package.json
@@ -19,8 +19,7 @@
     "@cmd/ui-theme": "workspace:*",
     "@cmd/ui-tokens": "workspace:*",
     "@vanilla-extract/css": "^1.6.8",
-    "classnames": "^2.3.1",
-    "typewriter-effect": "^2.18.2"
+    "classnames": "^2.3.1"
   },
   "peerDependencies": {
     "react": "^17.0.2",
