--- a/domain/rss/package.json
+++ b/domain/rss/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@cmd/domain",
+  "name": "@cmd/domain-rss",
   "version": "0.0.0",
   "private": true,
   "main": "dist/index.js",
@@ -10,6 +10,13 @@
   "devDependencies": {
     "@cmd/lib-builder": "workspace:*",
     "@cmd/tsconfig": "workspace:*",
+    "@types/node": "^17.0.5",
     "typescript": "^4.5.4"
+  },
+  "dependencies": {
+    "@cmd/domain-post": "workspace:*",
+    "date-fns": "^2.27.0",
+    "feed": "^4.2.2",
+    "fp-ts": "^2.11.5"
   }
 }
