--- a/ui/footer/package.json
+++ b/ui/footer/package.json
@@ -18,8 +18,7 @@
   "dependencies": {
     "@cmd/ui-theme": "workspace:*",
     "@cmd/ui-text": "workspace:*",
-    "@vanilla-extract/css": "^1.6.8",
-    "classnames": "^2.3.1"
+    "@vanilla-extract/css": "^1.6.8"
   },
   "peerDependencies": {
     "react": "^17.0.2",
