--- a/ui/layout/package.json
+++ b/ui/layout/package.json
@@ -18,8 +18,7 @@
   "dependencies": {
     "@cmd/ui-theme": "workspace:*",
     "@vanilla-extract/css": "^1.6.8",
-    "@vanilla-extract/css-utils": "^0.1.2",
-    "classnames": "^2.3.1"
+    "@vanilla-extract/css-utils": "^0.1.2"
   },
   "peerDependencies": {
     "react": "^17.0.2",
