fix dev turbo command

--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
         ]
       },
       "dev": {
-        "cache": false
+        "cache": false,
+        "dependsOn": [],
+        "outputs": []
       }
     }
   }
