--- a/domain/post/package.json
+++ b/domain/post/package.json
@@ -18,7 +18,9 @@
   },
   "dependencies": {
     "@cmd/domain-metadata": "workspace:*",
-    "jsdom": "^19.0.0",
+    "jsdom": "^19.0.0"
+  },
+  "peerDependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
