--- a/ui/music-embed/package.json
+++ b/ui/music-embed/package.json
@@ -13,7 +13,6 @@
     "@cmd/tsconfig": "workspace:*",
     "@types/react": "^17.0.37",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "typescript": "^4.5.4"
   },
   "dependencies": {
@@ -22,7 +21,6 @@
     "react-loading-skeleton": "^3.0.1"
   },
   "peerDependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^17.0.2"
   }
 }
