--- a/blog/package.json
+++ b/blog/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@cmd/domain-metadata": "workspace:*",
+    "@cmd/domain-player": "workspace:*",
     "@cmd/domain-post": "workspace:*",
     "@cmd/domain-rss": "workspace:*",
     "@cmd/ui-article": "workspace:*",
@@ -17,11 +18,13 @@
     "@cmd/ui-header": "workspace:*",
     "@cmd/ui-layout": "workspace:*",
     "@cmd/ui-music-embed": "workspace:*",
+    "@cmd/ui-player": "workspace:*",
     "@cmd/ui-text": "workspace:*",
     "@cmd/ui-theme": "workspace:*",
     "@mdx-js/loader": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@next/mdx": "^12.0.7",
+    "@remark-embedder/core": "^2.0.0",
     "date-fns": "^2.27.0",
     "feed": "^4.2.2",
     "fp-ts": "^2.11.5",
