--- a/ui/player/package.json
+++ b/ui/player/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@cmd/ui-footer",
+  "name": "@cmd/ui-player",
   "version": "0.0.0",
   "private": true,
   "main": "dist/index.js",
@@ -13,12 +13,20 @@
     "@cmd/tsconfig": "workspace:*",
     "@types/react": "^17.0.37",
     "react": "^17.0.2",
+    "tslib": "^2.3.1",
     "typescript": "^4.5.4"
   },
   "dependencies": {
-    "@cmd/ui-theme": "workspace:*",
+    "@cmd/domain-player": "workspace:*",
     "@cmd/ui-text": "workspace:*",
-    "@vanilla-extract/css": "^1.6.8"
+    "@cmd/ui-theme": "workspace:*",
+    "@fp51/opaque-union": "^1.0.0",
+    "@vanilla-extract/css": "^1.6.8",
+    "@vanilla-extract/css-utils": "^0.1.2",
+    "classnames": "^2.3.1",
+    "date-fns": "^2.27.0",
+    "fp-ts": "^2.11.5",
+    "react-loading-skeleton": "^3.0.1"
   },
   "peerDependencies": {
     "react": "^17.0.2"
