--- a/blog/package.json
+++ b/blog/package.json
@@ -29,6 +29,7 @@
     "feed": "^4.2.2",
     "fp-ts": "^2.11.8",
     "jsdom": "^19.0.0",
+    "linkedom": "^0.13.0",
     "next": "^12.0.8",
     "next-seo": "^4.29.0",
     "next-sitemap": "^1.9.12",
