--- a/domain/post/package.json
+++ b/domain/post/package.json
@@ -14,13 +14,14 @@
     "@types/jsdom": "^16.2.13",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "jsdom": "^19.0.0",
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "@cmd/domain-metadata": "workspace:*",
-    "jsdom": "^19.0.0"
+    "@cmd/domain-metadata": "workspace:*"
   },
   "peerDependencies": {
+    "jsdom": "^19.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
