--- a/apis/package.json
+++ b/apis/package.json
@@ -7,9 +7,10 @@
     "build": "echo nothing to do"
   },
   "dependencies": {
+    "cross-fetch": "^3.1.5",
     "linkedom": "^0.13.0"
   },
-  "devDependencies":{
+  "devDependencies": {
     "@vercel/node": "^1.12.1",
     "typescript": "^4.5.5"
   }
