--- a/apis/package.json
+++ b/apis/package.json
@@ -11,7 +11,6 @@
     "linkedom": "^0.13.0"
   },
   "devDependencies": {
-    "@vercel/node": "^1.12.1",
-    "typescript": "^4.5.5"
+    "@vercel/node": "^1.12.1"
   }
 }
