fix renovate config

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -12,6 +12,9 @@
     "group:recommended",
     "npm:unpublishSafe"
   ],
+  "repositories": [
+    "guillaumewuip/cmd"
+  ],
   "dryRun": true,
   "username": "renovate-release",
   "gitAuthor": "Renovate Bot <bot@renovateapp.com>",
