--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,20 +10,14 @@ jobs:
   install:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out repository code
-        uses: actions/checkout@v2
+      - name: Setup
+        uses: ./.github/actions/setup-project
 
-      - uses: pnpm/action-setup@v2.0.1
-        with:
-          version: 6
-
-      - uses: actions/setup-node@v2
-        with:
-          node-version: '14'
-          cache: 'pnpm'
-
-      - name: Install
-        run: pnpm install --frozen-lockfile
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Setup
+        uses: ./.github/actions/setup-project
 
       - name: Build
         env:
