disable Renovate dependency dashboard

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -14,6 +14,7 @@
     ":preserveSemverRanges",
     ":rebaseStalePrs",
     ":separateMultipleMajorReleases",
+    ":disableDependencyDashboard",
     "group:monorepos",
     "group:recommended",
     "npm:unpublishSafe"
