--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cmd",
   "version": "0.0.0",
   "private": true,
+  "packageManager": "pnpm@6.27.1",
   "scripts": {
     "preinstall": "npx only-allow pnpm"
   },
@@ -9,31 +10,6 @@
     "pnpm": "^6.27.1"
   },
   "devDependencies": {
-    "turbo": "^1.0.28"
-  },
-  "turbo": {
-    "baseBranch": "origin/main",
-    "npmClient": "pnpm",
-    "pipeline": {
-      "build": {
-        "dependsOn": [
-          "^build"
-        ],
-        "outputs": [
-          "dist/**",
-          "dist-typings/**",
-          ".next/**"
-        ]
-      },
-      "dev": {
-        "cache": false,
-        "dependsOn": [],
-        "outputs": []
-      },
-      "lint": {
-        "dependsOn": [],
-        "outputs": []
-      }
-    }
+    "turbo": "^1.1.0"
   }
 }
