fix missing box-sizing border box

--- a/ui/tokens/package.json
+++ b/ui/tokens/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "main": "dist/index.js",
   "typings": "dist-typings/index.d.ts",
+  "sideEffects": "false",
   "scripts": {
     "build": "lib-build",
     "dev": "lib-dev",
