--- a/domain/player/package.json
+++ b/domain/player/package.json
@@ -11,8 +11,8 @@
     "lint": "lib-lint \"src/**/*.@(js|ts|tsx)\""
   },
   "devDependencies": {
-    "@cmd/lib-builder": "workspace:*",
     "@cmd/eslint-config": "workspace:*",
+    "@cmd/lib-builder": "workspace:*",
     "@cmd/tsconfig": "workspace:*",
     "@types/lodash.throttle": "^4.1.6",
     "tslib": "^2.3.1",
@@ -24,6 +24,7 @@
     "fp-ts": "^2.11.8",
     "fp-ts-local-storage": "^1.0.3",
     "lodash.throttle": "^4.1.1",
+    "retry-ts": "^0.1.3",
     "zustand": "^3.6.9"
   }
 }
