--- a/blog/package.json
+++ b/blog/package.json
@@ -23,31 +23,28 @@
     "@cmd/ui-theme": "workspace:*",
     "@mdx-js/loader": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
-    "@next/mdx": "^12.1.1",
+    "@next/mdx": "^12.1.4",
     "@remark-embedder/core": "^2.0.0",
     "date-fns": "^2.28.0",
-    "feed": "^4.2.2",
     "fp-ts": "^2.11.9",
     "jsdom": "^19.0.0",
-    "linkedom": "^0.14.5",
-    "next": "^12.1.1",
-    "next-seo": "^5.2.0",
-    "next-sitemap": "^2.5.14",
+    "next": "^12.1.4",
+    "next-seo": "^5.3.0",
+    "next-sitemap": "^2.5.17",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-loading-skeleton": "^3.0.3",
-    "xml-parse": "^0.4.0"
+    "react-loading-skeleton": "^3.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.12",
+    "@babel/core": "^7.17.8",
     "@cmd/tsconfig": "workspace:*",
     "@types/jsdom": "^16.2.13",
     "@types/mdx-js__react": "^1.5.5",
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
-    "@vanilla-extract/next-plugin": "^2.0.1",
+    "@vanilla-extract/next-plugin": "^2.0.2",
     "typescript": "^4.6.3",
-    "webpack": "^5.70.0"
+    "webpack": "^5.71.0"
   }
 }
