add public/rss in turbo build outputs

--- a/turbo.json
+++ b/turbo.json
@@ -9,7 +9,8 @@
       "outputs": [
         "dist/**",
         "dist-typings/**",
-        ".next/**"
+        ".next/**",
+        "public/rss/**"
       ]
     },
     "dev": {
