--- a/domain/player/package.json
+++ b/domain/player/package.json
@@ -15,11 +15,10 @@
     "@cmd/lib-builder": "workspace:*",
     "@cmd/tsconfig": "workspace:*",
     "@types/lodash.throttle": "^4.1.6",
-    "tslib": "^2.3.1",
     "typescript": "^4.6.3"
   },
   "dependencies": {
-    "@fp51/opaque-union": "^1.0.0",
+    "@fp51/foldable-helpers": "^1.0.0",
     "classnames": "^2.3.1",
     "fp-ts": "^2.11.9",
     "fp-ts-local-storage": "^1.0.3",
