--- a/domain/player/package.json
+++ b/domain/player/package.json
@@ -19,10 +19,12 @@
   },
   "dependencies": {
     "@fp51/foldable-helpers": "^1.0.0",
+    "@types/react": "^18.0.0",
     "classnames": "^2.3.1",
     "fp-ts": "^2.11.10",
     "fp-ts-local-storage": "^1.0.3",
     "lodash.throttle": "^4.1.1",
+    "react": "^18.0.0",
     "retry-ts": "^0.1.4",
     "zustand": "^3.7.2"
   }
