--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,5 @@
 engine-strict=true
+strict-peer-dependencies=false
 public-hoist-pattern=[]
 # everything eslint-related should be hoisted in root for text-editor eslint
 # integration to detect eslint binary and the corresponding plugins and libs
