--- a/blog/package.json
+++ b/blog/package.json
@@ -25,9 +25,12 @@
     "@next/env": "^13.1.1",
     "@next/mdx": "^13.1.1",
     "@remark-embedder/core": "^3.0.1",
+    "@vercel/node": "^2.8.2",
+    "cross-fetch": "^3.1.5",
     "date-fns": "^2.29.3",
     "fp-ts": "^2.13.1",
     "jsdom": "^20.0.3",
+    "linkedom": "^0.14.21",
     "next": "^13.1.1",
     "next-seo": "^5.15.0",
     "next-sitemap": "^3.1.43",
