--- a/ui/footer/package.json
+++ b/ui/footer/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "main": "dist/index.js",
-  "typings": "dist-typings/index.d.ts",
+  "typings": "dist/index.d.ts",
   "sideEffects": "false",
   "scripts": {
     "build": "lib-build",
