--- a/domain/post/package.json
+++ b/domain/post/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
-  "sideEffects": "false",
+  "sideEffects": false,
   "scripts": {
     "build": "lib-build",
     "dev": "lib-dev",
