--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -14,5 +14,5 @@ jobs:
       - name: Self-hosted Renovate
         uses: renovatebot/github-action@v31.14.1
         with:
-          configurationFile: .github/renovate.json
+          configurationFile: .github/renovate.json5
           token: ${{ secrets.PRIVATE_GITHUB_TOKEN }}
