--- a/.github/actions/setup-project/action.yml
+++ b/.github/actions/setup-project/action.yml
@@ -6,11 +6,14 @@ runs:
   using: "composite"
   steps:
     - uses: pnpm/action-setup@v2.2.4
+      with:
+        version: 8
 
     - uses: actions/setup-node@v3
       with:
         node-version: '18'
         cache: 'pnpm'
+        cache-dependency-path: './pnpm-lock.yaml'
 
     - name: Install
       shell: bash
