--- a/blog/package.json
+++ b/blog/package.json
@@ -22,6 +22,7 @@
     "@cmd/ui-text": "workspace:*",
     "@cmd/ui-theme": "workspace:*",
     "@vanilla-extract/next-plugin": "^2.1.3",
+    "@vanilla-extract/css": "^1.11.0",
     "date-fns": "^2.30.0",
     "fp-ts": "^2.16.0",
     "linkedom": "^0.14.26",
