--- a/blog/tsconfig.json
+++ b/blog/tsconfig.json
@@ -5,11 +5,14 @@
     "allowJs": true,
     "declaration": false,
     "declarationMap": false,
-    "noEmit": true
+    "noEmit": true,
+    "plugins": [{ "name": "next" }],
+    "strictNullChecks": true
   },
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    ".next/types/**/*.ts"
   ]
 }
