--- a/blog/package.json
+++ b/blog/package.json
@@ -21,10 +21,11 @@
     "@cmd/ui-player": "workspace:*",
     "@cmd/ui-text": "workspace:*",
     "@cmd/ui-theme": "workspace:*",
-    "@vanilla-extract/next-plugin": "^2.1.3",
     "@vanilla-extract/css": "^1.11.0",
+    "@vanilla-extract/next-plugin": "^2.1.3",
     "date-fns": "^2.30.0",
     "fp-ts": "^2.16.0",
+    "jsdom": "^22.1.0",
     "linkedom": "^0.14.26",
     "next": "^13.4.4",
     "next-seo": "^6.0.0",
