--- a/domain/player/package.json
+++ b/domain/player/package.json
@@ -14,6 +14,7 @@
     "@cmd/eslint-config": "workspace:*",
     "@cmd/lib-builder": "workspace:*",
     "@cmd/tsconfig": "workspace:*",
+    "@types/jsdom": "^21.1.1",
     "@types/lodash.throttle": "^4.1.7",
     "typescript": "^5.1.3"
   },
@@ -23,6 +24,7 @@
     "classnames": "^2.3.2",
     "fp-ts": "^2.16.0",
     "fp-ts-local-storage": "^1.0.3",
+    "jsdom": "^22.1.0",
     "lodash.throttle": "^4.1.1",
     "react": "^18.2.0",
     "retry-ts": "^0.1.4",
