--- a/domain/rss/tsconfig.json
+++ b/domain/rss/tsconfig.json
@@ -2,8 +2,7 @@
   "extends": "@cmd/tsconfig",
   "compilerOptions": {
     "target": "ES6",
-    "baseUrl": "./",
-    "outDir": "./dist"
+    "outDir": "dist"
   },
   "include": [
     "src/**/*.ts"
