--- a/ui/article/tsconfig.json
+++ b/ui/article/tsconfig.json
@@ -1,8 +1,7 @@
 {
   "extends": "@cmd/tsconfig",
   "compilerOptions": {
-    "baseUrl": "./",
-    "outDir": "./dist"
+    "outDir": "dist"
   },
   "include": [
     "src/**/*.ts"
