--- a/ui/layout/tsconfig.json
+++ b/ui/layout/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "extends": "@cmd/tsconfig",
   "compilerOptions": {
-    "baseUrl": "./",
-    "outDir": "./dist"
+    "outDir": "dist"
   },
   "include": [
-    "src/**/*.ts"
+    "src/**/*.ts",
+    "src/**/*.tsx"
   ]
 }
