--- a/ui/player/package.json
+++ b/ui/player/package.json
@@ -28,7 +28,8 @@
     "@vanilla-extract/css-utils": "^0.1.3",
     "classnames": "^2.3.2",
     "date-fns": "^2.30.0",
-    "fp-ts": "^2.16.1"
+    "fp-ts": "^2.16.1",
+    "react-content-loader": "^6.2.1"
   },
   "peerDependencies": {
     "react": "^18.0.0"
