--- a/ui/header/package.json
+++ b/ui/header/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@cmd/ui-theme": "workspace:*",
     "@vanilla-extract/css": "^1.13.0",
+    "clsx": "^2.0.0",
     "typewriter-effect": "^2.20.1"
   },
   "peerDependencies": {
