--- a/ui/text/package.json
+++ b/ui/text/package.json
@@ -21,7 +21,7 @@
   "dependencies": {
     "@cmd/ui-theme": "workspace:*",
     "@vanilla-extract/css": "^1.13.0",
-    "classnames": "^2.3.2"
+    "clsx": "^2.0.0"
   },
   "peerDependencies": {
     "react": "^18.0.0"
