--- a/posts/package.json
+++ b/posts/package.json
@@ -22,7 +22,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "@cmd/domain-post": "workspace:*",
+    "@cmd/domain-content": "workspace:*",
     "date-fns": "^2.30.0",
     "jsdom": "^22.1.0",
     "next": "^13.5.1",
