--- a/ui/article/package.json
+++ b/ui/article/package.json
@@ -22,7 +22,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "@cmd/domain-post": "workspace:*",
+    "@cmd/domain-content": "workspace:*",
     "@cmd/ui-text": "workspace:*",
     "@cmd/ui-theme": "workspace:*",
     "@vanilla-extract/css": "^1.13.0",
